--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
         </div> 
         <nav>
           <ul class="nav-links">
-            <li><a href="#home">Home</a></li>
+            <li><a href="#home">About</a></li>
             <li><a href="#services">Services</a></li>
             <li><a href="#photos">Photos</a></li>
             <li><a href="#contact">Contact</a></li>
