--- a/index.html
+++ b/index.html
@@ -146,7 +146,7 @@
 
     <footer>
       <div class="footer-container">
-        <p>&copy; 2024 Time Travel Agency. All rights reserved.</p>
+        <p>&copy; 2024 Time Travel Agency. All rights reserved V2.0.</p>
         <ul class="social-links">
           <li><i href="#" class="fa fa-facebook"></i></li>
           <li><i href="#" class="fa fa-youtube"></i></li>
